--- a/enkas/あ.html
+++ b/enkas/あ.html
@@ -37,50 +37,50 @@
 <br><hr><br><h1>
 <a id="Aibo">【Aibo】</a>A1-C3<br>
 <br>
-1 <ruby><rb>汗</rb><rt>あせ</rt></ruby>にまみれて　働いて<br>
+1 <ruby><rb>汗</rb><rt>あせ</rt></ruby>にまみれて働いて<br>
 どうにかやって　きたよ<br>
 立ち直りたかった　だけだよ<br>
 君のせいじゃ　ないよ<br>
 <br>
-あれから　どこに行って　何してた<br>
+あれから　どこに行って　なにしてた<br>
 泣いたりして　ないよね<br>
 そばに　いなくても<br>
 <br>
-2 朝から晩まで　二人で<br>
+2 朝から晩まで　ふたりで<br>
 遊びまわって　いたね<br>
 寝るところなんてない　毎日でも<br>
 それで充分　だったね<br>
 <br>
-あの時　一緒になって　何みてた<br>
+あの時　一緒になって　なにみてた<br>
 泣いたりして　ないよね<br>
 そばに　いなくても<br>
 <br>
-3 これから　どこに行って　何してく<br>
+3 これから　どこに行って　なにしてく<br>
 泣いたりして　ないよね<br>
 そばに　いなくても<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
 <a id="あこがれの郵便馬車">【あこがれの郵便馬車】</a>F1-G2<br>
 <br>
-1 南の丘を　<ruby><rb>遥々</rb><rt>はるばる</rt></ruby>と<br>
+1 南の丘を　はるばると<br>
 郵便馬車が　やってくる<br>
-嬉しい便りを　乗せて<br>
-ひずめの　響きも<ruby><rb>軽</rb><rt>か</rt></ruby>るく<br>
+うれしい便りを　乗せて<br>
+ひずめの　響きもかるく<br>
 耳をすまして　ごらんなさい<br>
 ほらほらほらほら　やってくる<br>
 郵便馬車は　夢の馬車<br>
 <br>
 2 レモンの花の　咲く道を<br>
 郵便馬車は　日にいちど<br>
-嬉しい便りは　誰に<br>
+うれしい便りは　誰に<br>
 キミボクあなたの　胸に<br>
-広い<ruby><rb>牧場</rb><rt>まきば</rt></ruby>の　お昼どき<br>
+ひろい<ruby><rb>牧場</rb><rt>まきば</rt></ruby>の　おひるどき<br>
 ほらほらほらほら　やってくる<br>
 郵便馬車は　愛の馬車<br>
 <br>
-3 <ruby><rb>峠</rb><rt>とうげ</rt></ruby>を越えて　遥々と<br>
-郵便馬車の　見える頃<br>
-嬉しい便りは　まだか<br>
+3 <ruby><rb>峠</rb><rt>とうげ</rt></ruby>を越えて　はるばると<br>
+郵便馬車の　みえる頃<br>
+うれしい便りは　まだか<br>
 若者みんなが　待つよ<br>
 耳をすまして　ごらんなさい<br>
 ほらほらほらほら　やってくる<br>
@@ -182,7 +182,7 @@ Partyには行きたい（な…）<br>
 あれも夢なら　これも夢<br>
 <ruby><rb>愚痴</rb><rt>ぐち</rt></ruby>はいうまい　玄界そだち<br>
 男命を　情にかけて<br>
-<ruby><rb>叩</rb><rt>たた</rt></ruby>く太鼓の　暴れ打ち<br>
+たたく太鼓の　暴れ打ち<br>
 <br>
 2 酒と喧嘩は　あとへはひかぬ<br>
 意地と度胸の　勇み駒<br>
@@ -281,15 +281,15 @@ Partyには行きたい（な…）<br>
 <a id="アカシアの大連">【アカシアの大連】</a>E1-A2<br>
 <br>
 1 アカシヤの大連を　<ruby><rb>訪</rb><rt>たず</rt></ruby>ねてきてみたの<br>
-遠い日の<ruby><rb>幻</rb><rt>まぼろし</rt></ruby>　手<ruby><rb>探</rb><rt>さぐ</rt></ruby>りするように<br>
+遠い日のまぼろし　手さぐりするように<br>
 <br>
 丘の上から港を　はるか見<ruby><rb>下</rb><rt>お</rt></ruby>ろせば<br>
-<ruby><rb>靄</rb><rt>もや</rt></ruby>に霞む<ruby><rb>波止場</rb><rt>はとば</rt></ruby>を離れて<br>
+<ruby><rb>靄</rb><rt>もや</rt></ruby>にかすむ<ruby><rb>波止場</rb><rt>はとば</rt></ruby>を離れて<br>
 大きな船が出る<br>
 <br>
 街のあちらこちらに<br>
-日本の匂いが　<ruby><rb>微</rb><rt>かすか</rt></ruby>に残る<br>
-夢の故郷<br>
+日本の匂いが　かすかに残る<br>
+夢のふるさと<br>
 <br>
 2 アカシヤの大連を　歩いて涙ぐむ<br>
 父母が愛して　暮らした街だから<br>
@@ -339,7 +339,7 @@ Partyには行きたい（な…）<br>
 寝乱れて　隠れ宿<br>
 九十九折り　浄蓮の滝<br>
 舞い上がり　揺れ墜ちる<br>
-肩のむこうに　あなた　山が燃える<br>
+肩の向こうに　あなた　山が燃える<br>
 <br>
 何があっても　もういいの<br>
 くらくら燃える　火をくぐり<br>
@@ -348,9 +348,9 @@ Partyには行きたい（な…）<br>
 2 口を開けば　別れると<br>
 刺さったまんまの　割れ硝子<br>
 二人で居たって　寒いけど<br>
-嘘でも抱かれりゃ　暖かい<br>
+嘘でも抱かれりゃ　あたたかい<br>
 <br>
-山葵沢　隠れ径<br>
+わさび沢　隠れ径<br>
 小夜時雨　寒天橋<br>
 恨んでも　恨んでも<br>
 躯うらはら　あなた　山が燃える<br>
@@ -372,15 +372,15 @@ Partyには行きたい（な…）<br>
 <a id="安里屋ユンタ">【安里屋ユンタ】</a>A1-C3<br>
 <br>
 1 サー君は野中の　<ruby><rb>茨</rb><rt>いばら</rt></ruby>の花か<br>
-暮れて帰れば　やれほんに引き止める<br>
+暮れて帰れば　ヤレホン二引き止める<br>
 マタハーリヌ　ツィンダラ　カヌシャマヨ<br>
 <br>
 2 サー　嬉し<ruby><rb>恥</rb><rt>はじ</rt></ruby>かし　<ruby><rb>浮名</rb><rt>うきな</rt></ruby>を立てて<br>
-<ruby><rb>主</rb><rt>ぬし</rt></ruby>は<ruby><rb>白百合</rb><rt>しらゆり</rt></ruby>　やれほんにままならぬ<br>
+<ruby><rb>主</rb><rt>ぬし</rt></ruby>は<ruby><rb>白百合</rb><rt>しらゆり</rt></ruby>　ヤレホン二ままならぬ<br>
 マタハーリヌ　ツィンダラ　カヌシャマヨ<br>
 <br>
 3 サー　田<ruby><rb>草</rb><rt>ぐさ</rt></ruby>取るなら　<ruby><rb>十六夜月夜</rb><rt>いざよいづきよ</rt></ruby><br>
-二人で気がねも　やれほんに水入らず<br>
+二人で気兼ねも　ヤレホン二水入らず<br>
 マタハーリヌ　ツィンダラ　カヌシャマヨ<br>
 <br>
 4 サー　染めてあげましょ　<ruby><rb>紺地</rb><rt>こんじ</rt></ruby>の小袖<br>
@@ -497,7 +497,7 @@ Partyには行きたい（な…）<br>
 糸ひくような接吻しましょう<br>
 <br>
 あぁ　生きてる意味を　求めたりしない<br>
-ただ　あなたの愛に　包まれながら<br>
+ただ　あなたの愛に　つつまれながら<br>
 そう　キャンドルの灯が<br>
 いつか消える時まで<br>
 愛が愛のままで　つづくように…<br>
@@ -512,22 +512,22 @@ Partyには行きたい（な…）<br>
 <a id="愛のメモリー">【愛のメモリー】</a>E1-A2-升半音<br>
 <br>
 1 愛の甘いなごりに　あなたはまどろむ<br>
-天使の様な　その微笑みに　時は立ち止まる<br>
+天使のような　その微笑みに　時は立ち止まる<br>
 <br>
-窓に朝の光が　優しくゆれ<ruby><rb>動</rb><rt>うご</rt></ruby>き<br>
-あなたの髪を　<ruby><rb>躊躇</rb><rt>ためら</rt></ruby>いがちに　染めてゆく<br>
+窓に朝の光が　やさしくゆれ<ruby><rb>動</rb><rt>うご</rt></ruby>き<br>
+あなたの髪を　ためらいがちに　染めてゆく<br>
 <br>
-美しい人生よ　限りない喜びよ<br>
-この胸の時めきを　あなたに<br>
+美しい人生よ　かぎりない喜びよ<br>
+この胸のときめきを　あなたに<br>
 <br>
 この世に大切なのは　愛し合うことだけと<br>
 あなたはおしえてくれる<br>
 <br>
 ２ 愛は風のささやき　あなたは目<ruby><rb>覚</rb><rt>ざ</rt></ruby>める<br>
-子供の様な　瞳を向けて　指を<ruby><rb>絡</rb><rt>から</rt></ruby>めるよ<br>
+子供のような　瞳を向けて　指を絡からめるよ<br>
 <br>
-そっと肌をよせれば　水仙の花の様な<br>
-優しい香りが　<ruby><rb>恥</rb><rt>は</rt></ruby>じらう様に　揺れている<br>
+そっと肌をよせれば　水仙の花のような<br>
+やさしい香りが　はじらう様に　ゆれている<br>
 <br>
 美しい人生は　言葉さえ置き忘れ<br>
 <ruby><rb>満</rb><rt>み</rt></ruby>ち<ruby><rb>足</rb><rt>た</rt></ruby>りた二人を　包むよ<br>
@@ -536,15 +536,15 @@ Partyには行きたい（な…）<br>
 あなたはおしえてくれる<br>
 <br>
 （升半音）<br>
-3 美しい人生よ　限りない喜びよ<br>
-この胸の時めきを　あなたに<br>
+3 美しい人生よ　かぎりない喜びよ<br>
+この胸のときめきを　あなたに<br>
 <br>
 二人に死がおとずれて<br>
 星になる日が来ても<br>
 あなたと離れはしない<br>
 <br>
-美しい人生よ　限りない喜びよ<br>
-この胸の時めきを　あなたに<br>
+美しい人生よ　かぎりない喜びよ<br>
+この胸のときめきを　あなたに<br>
 <br>
 二人に死がおとずれて<br>
 星になる日が来ても<br>
@@ -560,13 +560,13 @@ Partyには行きたい（な…）<br>
 <br>
 見上げる　空の青さを<br>
 気まぐれに雲は流れ<br>
-綺麗なものは遠くに　あるから綺麗なの<br>
+キレイなものは遠くに　あるからキレイなの<br>
 <br>
 約束したとおりあなたと<br>
 ここに<ruby><rb>来</rb><rt>こ</rt></ruby>られて本当に良かったわ<br>
 この込み上がる気持ちが<br>
 愛じゃないなら<br>
-何が愛かわからないほど<br>
+何が愛か分からないほど<br>
 <br>
 愛をこめて花束を<br>
 大<ruby><rb>袈裟</rb><rt>げさ</rt></ruby>だけど　受け取って<br>
@@ -580,7 +580,7 @@ Partyには行きたい（な…）<br>
 分かって<ruby><rb>選</rb><rt>えら</rt></ruby>びそびれた<br>
 <ruby><rb>臆病</rb><rt>おくびょう</rt></ruby>のせいでしょう<br>
 <br>
-私は泣くのが得意で<br>
+わたしは泣くのが得意で<br>
 最初から<ruby><rb>慰</rb><rt>なぐさ</rt></ruby>めを<ruby><rb>当</rb><rt>あ</rt></ruby>てにしてたわ<br>
 何度も間違った道　<ruby><rb>選</rb><rt>えら</rt></ruby>び続けて<br>
 <ruby><rb>正</rb><rt>ただ</rt></ruby>しくここに戻って来たの<br>
@@ -618,7 +618,7 @@ pink, yellow green, ash, brown……<br>
 1 あなたが　好きだからそれでいいのよ<br>
 たとえ一緒に街を　歩けなくても<br>
 この部屋に　いつも帰ってくれたら<br>
-私は　待つ身の女でいいの<br>
+わたしは　待つ身の女でいいの<br>
 <br>
 尽くして　泣きぬれて　そして愛されて<br>
 時が二人を　離さぬように<br>
@@ -628,7 +628,7 @@ pink, yellow green, ash, brown……<br>
 2 めぐり逢い　少しだけ<ruby><rb>遅</rb><rt>おそ</rt></ruby>いだけなの<br>
 何も言わずいてね　わかっているわ<br>
 心だけ　せめて残してくれたら<br>
-私は　見送る女でいいの<br>
+わたしは　見送る女でいいの<br>
 <br>
 尽くして　泣きぬれて　そして愛されて<br>
 明日が二人を　こわさぬように<br>
@@ -655,14 +655,14 @@ pink, yellow green, ash, brown……<br>
 思いどおりに　ならない夢を<br>
 失くしたりして<br>
 <br>
-人はか<ruby><rb>弱</rb><rt>よわ</rt></ruby>い　か弱いものですね<br>
+人はかよわい　かよわいものですね<br>
 それでも未来達は　人待ち顔して微笑む<br>
 人生って　嬉しいものですね<br>
 <br>
 3 愛燦燦と　この身に降って<br>
 心秘そかな嬉し涙を　流したりして<br>
 <br>
-人は可愛い　可愛いものですね<br>
+人はかわいい　かわいいものですね<br>
 ああ過去達は　優しく<ruby><rb>睫毛</rb><rt>まつげ</rt></ruby>に<ruby><rb>憩</rb><rt>いこ</rt></ruby>う<br>
 人生って　不思議なものですね<br>
 <br>
@@ -787,7 +787,7 @@ pink, yellow green, ash, brown……<br>
 <ruby><rb>負</rb><rt>お</rt></ruby>われて見たのは　いつの日か<br>
 <br>
 2 山の畑の　<ruby><rb>桑</rb><rt>くわ</rt></ruby>の実を<br>
-小<ruby><rb>籠</rb><rt>かご</rt></ruby>につんだは　まぼろしか<br>
+小<ruby><rb>籠</rb><rt>かご</rt></ruby>に摘んだは　まぼろしか<br>
 <br>
 3 十五で姐やは　嫁にゆき<br>
 お里のたよりも　たえはてた<br>
@@ -823,8 +823,8 @@ pink, yellow green, ash, brown……<br>
 今さら　何を言っても<br>
 信じてもらえないね<br>
 <br>
-3 神様やっと<br>
-人を好きになれた　この私が…<br>
+3 神様やっと　人を好きになれた<br>
+この私が…<br>
 <br>
 ずっと　気のないふりを<br>
 して来たから<br>
