--- a/researchcn.html
+++ b/researchcn.html
@@ -348,8 +348,7 @@
 				<tr><td>
 					<i>Multi-Modal Remote Perception Learning for Object Sensory Data.</i> Almujally, N. A., Rafique, A. A., Mudawi, N. A., Alazeb, A., Alonazi, M., Algarni, A., Jalal, A.*, and Liu, H.* (2024). Frontiers in Neurorobotics.<br>
 					<a href="https://scholar.google.com/scholar?q=Multi-modal+remote+perception+learning+for+object+sensory+data" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->		
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Multi-modal-remote-perception-learning-for-object-Almujally-Rafique/1b8febbf47bf63a16aa2625dd731461471df6ff1" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>		
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/384147762_Multi-modal_remote_perception_learning_for_object_sensory_data" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2024.1427786/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1427786" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1427786</a>
@@ -455,12 +454,11 @@
 				</td></tr>
 				<tr><td>
 					<i>LSTM-MorA: Melody-Accompaniment Classification of MIDI Tracks.</i> Liu, H.*, Flaack, L., Zhang, S., and Schultz, T. (2024). In ICANN 2024 - 33rd International Conference on Artificial Neural Networks, pages 443-485. Springer, Cham.<br>
+					<a href="https://scholar.google.com/scholar?q=LSTM-MorA%3A+Melody-Accompaniment+Classification+of+MIDI+Tracks" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;
 					-->
-					<a href="https://www.researchgate.net/publication/384068802_LSTM-MorA_Melody-Accompaniment_Classification_of_MIDI_Tracks" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/384068802_LSTM-MorA_Melody-Accompaniment_Classification_of_MIDI_Tracks" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/lstm-mora-melody-accompaniment-classification-of-midi-tracks/50008576" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-031-72356-8_29" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2024mora&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
