--- a/reviewer.html
+++ b/reviewer.html
@@ -16,6 +16,10 @@
 		&#9679; SN Computer Sciences<br>
 		&#9679; Frontiers of Information Technology and Electronic Engineering<br>
 		<br>
+		<img src="images/IEEE.png" height="30" class="pop1"><br>
+		&#9679; IEEE Transactions on Neural Systems and Rehabilitation Engineering<br>
+		&#9679; IEEE Sensors Journal<br>
+		<br>
 		<img src="images/Elsevier.png" height="30" class="pop1"> <img src="images/ScienceDirect.png" height="30" class="pop1"><br>
 		&#9679; Biomedical Signal Processing and Control<br>
 		<br>
@@ -33,9 +37,10 @@
 		&#9679; Frontiers in Plant Science<br>
 		&#9679; Frontiers in Bioengineering and Biotechnology<br>
 		&#9679; Frontiers in Physiology<br>
-		&#9679; Frontiers in Medicine<br>
+		&#9679; Frontiers in Neurorobotics<br>
 		&#9679; Frontiers in Big Data<br>
 		&#9679; Frontiers in Artificial Intelligence<br>
+		&#9679; Frontiers in Medicine<br>
 		<br>
 		<img src="images/ISPRS.png" height="35" class="pop1"><br>
 		&#9679; ISPRS International Journal of Geo-Information<br>
@@ -47,31 +52,34 @@
 		&#9679; Environment and Social Psychology<br>
 		<br>
 		<img src="images/MDPI.png" height="30" class="pop1"><br>
+		&#9679; Foods<br>
+		&#9679; Journal of Marine Science and Engineering<br>
+		&#9679; Remote Sensing<br>
+		&#9679; Biosensors<br>
+		&#9679; Biomimetics<br>
+		&#9679; Axioms<br>
+		&#9679; Brain Sciences<br>
+		&#9679; Entropy<br>
+		&#9679; Micromachines<br>
+		&#9679; Smart Cities<br>	
+		&#9679; Big Data and Cognitive Computing<br>
+		&#9679; Informatics<br>
+		&#9679; Data<br>
+		&#9679; Information<br>
+		&#9679; Sports<br>
+		and other 10+ journals<br>
+		<!--
 		&#9679; Algorithms<br>
 		&#9679; Applied Sciences<br>
-		&#9679; Axioms<br>
-		&#9679; Big Data and Cognitive Computing<br>
 		&#9679; Biomedicines<br>
-		&#9679; Biomimetics<br>
-		&#9679; Biosensors<br>
-		&#9679; Brain Sciences<br>
 		&#9679; Buildings<br>
-		&#9679; Data<br>
 		&#9679; Diagnostics<br>
 		&#9679; Electronics<br>
-		&#9679; Entropy<br>
-		&#9679; Foods<br>
-		&#9679; Informatics<br>
-		&#9679; Information<br>
-		&#9679; Journal of Marine Science and Engineering<br>
 		&#9679; Journal of Personalized Medicine<br>
 		&#9679; Machines<br>
-		&#9679; Micromachines<br>
-		&#9679; Remote Sensing<br>
 		&#9679; Sensors<br>
-		&#9679; Smart Cities<br>
-		&#9679; Sports<br>
 		&#9679; Sustainability<br>
+		-->
 		<br>
 		<img src="images/Conference.png" height="35" class="pop1"><br>
 		&#9679; ITG, etc.<br>
