--- a/enkas/あ.html
+++ b/enkas/あ.html
@@ -666,7 +666,7 @@ pink, yellow green, ash, brown……<br>
 ああ過去達は　優しく<ruby><rb>睫毛</rb><rt>まつげ</rt></ruby>に<ruby><rb>憩</rb><rt>いこ</rt></ruby>う<br>
 人生って　不思議なものですね<br>
 <br>
-4 あゃ　未来達は　人待ち顔して微笑む<br>
+4 ああ　未来達は　人待ち顔して微笑む<br>
 人生って　嬉しいものですね<br>
 </h1><br><h3><a href="#あ">Back to Top</a></h3>
 <br><hr><br><h1>
