--- a/enkas/い.html
+++ b/enkas/い.html
@@ -36,6 +36,7 @@
 青い<ruby><rb>芒</rb><rt>すすき</rt></ruby>の小径を　帰るのか<br>
 私は　今から　想い出を<ruby><rb>創</rb><rt>つく</rt></ruby>るため<br>
 砂に<ruby><rb>枯木</rb><rt>かれき</rt></ruby>で書くつもり　"さよなら"と<br>
+<br>
 あゝ　日本のどこかに<br>
 私を　待ってる　人がいる<br>
 いい日　旅立ち　<ruby><rb>羊</rb><rt>ひつじ</rt></ruby>雲を探しに<br>
@@ -55,7 +56,7 @@
 夢を今もふところに　西へ行く<br>
 <br>
 ああ　日本のどこかに<br>
-私を待ってる人がいる<br>
+私を　待ってる　人がいる<br>
 いい日　旅立ち　<ruby><rb>再</rb><rt>ふたた</rt></ruby>びの風の中<br>
 今も聞こえるあの日の　歌を道連れに<br>
 <br>
@@ -65,12 +66,12 @@
 自分の影を捜しに　西へ行く<br>
 <br>
 ああ　日本のどこかに<br>
-私を待ってる人がいる<br>
+私を　待ってる　人がいる<br>
 いい日　旅立ち　朝焼けの風の中<br>
 今も聞こえるあの日の　歌を道連れに<br>
 <br>
 3 ああ　日本のどこかに<br>
-私を待ってる人がいる<br>
+私を　待ってる　人がいる<br>
 いい日　旅立ち　<ruby><rb>憧憬</rb><rt>あこがれ</rt></ruby>は風の中<br>
 今も聞こえるあの日の　歌を道連れに<br>
 </h1><br><h3><a href="#い">Back to Top</a></h3>
@@ -89,33 +90,26 @@
 ＊いざ踊りましょう　いざ　歌いましょう　いざ<br>
 あぁ　インターナショナルの祭りです<br>
 <br>
-<br>
-2 聞け我等が<ruby><rb>雄叫</rb><rt>おたけ</rt></ruby>び　天地<ruby><rb>轟</rb><rt>とどろ</rt></ruby>きて<br>
+2 聞け<ruby><rb>我等</rb><rt>われら</rt></ruby>が<ruby><rb>雄叫</rb><rt>おたけ</rt></ruby>び　天地<ruby><rb>轟</rb><rt>とどろ</rt></ruby>きて<br>
 <ruby><rb>屍</rb><rt>かばね</rt></ruby>越ゆる我が旗　行く手を守る<br>
 <br>
 <ruby><rb>圧制</rb><rt>あっせい</rt></ruby>の壁破りて　<ruby><rb>固</rb><rt>かた</rt></ruby>き我が<ruby><rb>腕</rb><rt>かいな</rt></ruby><br>
 今ぞ高く<ruby><rb>掲</rb><rt>かか</rt></ruby>げん　我が<ruby><rb>勝利</rb><rt>しょうり</rt></ruby>の旗<br>
 <br>
 いざ<ruby><rb>闘</rb><rt>たたか</rt></ruby>わん　いざ　<ruby><rb>奮</rb><rt>ふる</rt></ruby>い立て　いざ<br>
-あぁ　インターナショナル　我等がもの<br>
+あぁ　インターナショナル　<ruby><rb>我等</rb><rt>われら</rt></ruby>がもの<br>
 <br>
 ＊いざ踊りましょう　いざ　歌いましょう　いざ<br>
 あぁ　インターナショナルの祭りです<br>
 <br>
-＊3 いざ<ruby><rb>闘</rb><rt>たたか</rt></ruby>わん　いざ　<ruby><rb>奮</rb><rt>ふる</rt></ruby>い立て　いざ<br>
-あぁ　インターナショナル　我等がもの<br>
-<br>
-＊いざ踊りましょう　いざ　歌いましょう　いざ<br>
-あぁ　インターナショナルの祭りです<br>
-<br>
-＊4 <ruby><rb>起</rb><rt>た</rt></ruby>て<ruby><rb>飢</rb><rt>う</rt></ruby>えたる者よ　祭りの日は来たり<br>
+＊3 <ruby><rb>起</rb><rt>た</rt></ruby>て<ruby><rb>飢</rb><rt>う</rt></ruby>えたる者よ　祭りの日は来たり<br>
 醒めよ我が<ruby><rb>楽隊</rb><rt>がくたい</rt></ruby>　<ruby><rb>暁</rb><rt>あかつき</rt></ruby>は来ぬ<br>
 <br>
 <ruby><rb>静寂</rb><rt>せいじゃく</rt></ruby>の<ruby><rb>鎖</rb><rt>くさり</rt></ruby><ruby><rb>断</rb><rt>た</rt></ruby>つひ　チンドンが響く<br>
 チャンゴを打ち鳴らせば　皆　踊り出す<br>
 <br>
 いざ<ruby><rb>闘</rb><rt>たたか</rt></ruby>わん　いざ　<ruby><rb>奮</rb><rt>ふる</rt></ruby>い立て　いざ<br>
-あぁ　インターナショナル　我等がもの<br>
+あぁ　インターナショナル　<ruby><rb>我等</rb><rt>われら</rt></ruby>がもの<br>
 <br>
 いざ踊りましょう　いざ　歌いましょう　いざ<br>
 あぁ　インターナショナルの祭りです<br>
@@ -166,7 +160,7 @@
 「あなた」「おまえ」　<ruby><rb>夫婦</rb><rt>みょうと</rt></ruby>みち<br>
 命くれない　命くれない　二人<ruby><rb>連</rb><rt>づ</rt></ruby>れ<br>
 <br>
-2 人目を<ruby><rb>忍</rb><rt>しの</rt></ruby>んでで　隠れて泣いた<br>
+2 人目を<ruby><rb>忍</rb><rt>しの</rt></ruby>んで　隠れて泣いた<br>
 そんな日もある　傷もある<br>
 <br>
 苦労<ruby><rb>積</rb><rt>つみ</rt></ruby>荷の　<ruby><rb>木</rb><rt>こ</rt></ruby>の葉の舟で<br>
@@ -243,7 +237,7 @@
 ちょっとふり向いて　見ただけの異邦人<br>
 <br>
 2 市場へ行く人の波に　身体を<ruby><rb>預</rb><rt>あず</rt></ruby>け<br>
-石だたみの街角を　ゆらゆらとさまよう<br>
+石畳みの街角を　ゆらゆらとさまよう<br>
 <br>
 祈りの声　<ruby><rb>日詰</rb><rt>ひづめ</rt></ruby>の音　歌うようなざわめき<br>
 私を置き去りに　過ぎてゆく白い朝<br>
