--- a/reviewer.html
+++ b/reviewer.html
@@ -33,14 +33,14 @@
 		&#9679; Physica Scripta<br>
 		&#9679; Engineering Research Express<br>
 		<br>
-		<img src="images/Frontiers.png" height="35" class="pop1"><br>
-		&#9679; Frontiers in Plant Science<br>
-		&#9679; Frontiers in Bioengineering and Biotechnology<br>
-		&#9679; Frontiers in Physiology<br>
-		&#9679; Frontiers in Neurorobotics<br>
-		&#9679; Frontiers in Big Data<br>
-		&#9679; Frontiers in Artificial Intelligence<br>
-		&#9679; Frontiers in Medicine<br>
+		<img src="images/Frontiers.png" height="35" class="pop1"> in<br>
+		&#9679; Digital Health<br>
+		&#9679; Bioengineering and Biotechnology<br>
+		&#9679; Physiology<br>
+		&#9679; Neurorobotics<br>
+		&#9679; Big Data<br>
+		&#9679; Artificial Intelligence<br>
+		&#9679; Medicine<br>
 		<br>
 		<img src="images/ISPRS.png" height="35" class="pop1"><br>
 		&#9679; ISPRS International Journal of Geo-Information<br>
