--- a/supervision.html
+++ b/supervision.html
@@ -11,7 +11,7 @@
 	-->
 	<tr><td>2019</td><td>Yale Hartmann</td><td>Implementation and Optimisation of a Human Activity Recognition System using Sensors integrated into a Knee Bandage</td></tr>
 	<tr><td>2019</td><td>Timo Urban</td><td>Entwicklung einer mobilen Anwendung für Echtzeit-Visualisierung und Archivierung von mehrkanaliger Biosignalaufnahme mit Bluetooth</td></tr>
-	<tr><td>2020</td><td>Lennard Mai</td><td>Automatische Segmentierung von Bewegungsdaten eines biosignalbasierten, in einer Kniebandage integrierten HAR Systems</td></tr>
+	<tr><td>2019</td><td>Lennard Mai</td><td>Automatische Segmentierung von Bewegungsdaten eines biosignalbasierten, in einer Kniebandage integrierten HAR Systems</td></tr>
 	<tr><td>2020</td><td>Yale Hartmann</td><td>Feature Selection for Multimodal Human Activity Recognition</td></tr>
 	<tr><td>2021</td><td>Kilian Lüdemann</td><td>Sturzerkennung in Infrarotvideos mit Hilfe von Rekurrenten Neuronalen Netzen</td></tr>
 	<tr><td>2021</td><td>Steffen Lahrberg</td><td>Direction Distinguishment in Wearable Sensor-Based Human Activity Recognition Using Cross-Channel Features</td></tr>
@@ -23,4 +23,6 @@
 	<tr><td>2024</td><td>Thorben Lorenzen</td><td>Erkennung von Finger-Aktivitäten beim Klavierspiel mit EMG</td></tr>
 	<tr><td>2024</td><td>Hannes Wehrmann</td><td>Adaption von Musik an die Bewegungsdaten beim Laufen – Implementation und Validierung von ML-Algorithmen für Android-Applikationen</td></tr>
 	<tr><td>2024</td><td>Shiyao Zhang</td><td>Real-Time Artifact Recognition during ECG Acquisition</td></tr>
+	<tr><td>2024</td><td>Finn Redel</td><td>Entwicklung eines ereignisgesteuerten, verteilten Analyseframeworks für Chromatographiegerätedaten</td></tr>
+	<tr><td>2024</td><td>Arthur Belousov</td><td>Melody-Based Songs’ Singing　Difficulty Analysis: Feature and Scoring Design, Web Platform Implementation, and Field Usability Study</td></tr>
 </table>
