--- a/publications.html
+++ b/publications.html
@@ -421,8 +421,9 @@
 		<img src="images/Candidate.png" height="15" class = "pop1"> Best Paper Finalists <img src="images/2.png" height="15">
 	</td></tr>
 	<tr><td>
-		<i>The Bigger the Better? Towards EMG-Based Single-Trial Action Unit Recognition of Subtle Expressions. </i> Küster, D., Rammohan, R. A., Liu, H., Schultz, T., Koschke, R. (2025). In BIOSTEC 2025 - Proceedings of the 18th International Joint Conference on Biomedical Engineering Systems and Technologies - BIODEVICES, pages . INSTICC, SciTePress.<br>
-		<img src="images/Highly.png" height="15" class = "pop1"> 
+		<i>The Bigger the Better? Towards EMG-Based Single-Trial Action Unit Recognition of Subtle Expressions. </i> Küster, D., Rammohan, R. A., Liu, H., Schultz, T., Koschke, R. (2025). In BIOSTEC 2025 - Proceedings of the 18th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 1: BIODEVICES, pages 100-110. INSTICC, SciTePress.<br>
+		<img src="images/Highly.png" height="15" class = "pop1"> &nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=kuester2025emg_size&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		<!-- &nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -462,9 +463,10 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<b>(Best Student Paper Award Finalist)</b>
 	</td></tr>
 	<tr><td>
-		<i>Longitudinal Data Acquisition for AI Services in Long-Term Care Facilities for Older Adults. </i> Paul, R. E., Kock, P., Hartmann, Y., Ball, E., Seibert, K., Liu, H., and Schultz, T. (2025). In BIOSTEC 2025 - Proceedings of the 18th International Joint Conference on Biomedical Engineering Systems and Technologies - Workshop, pages . INSTICC, SciTePress.<br>
+		<i>Longitudinal Data Acquisition for AI Services in Long-Term Care Facilities for Older Adults. </i> Paul, R. E., Kock, P., Hartmann, Y., Ball, E., Seibert, K., Liu, H., and Schultz, T. (2025). In BIOSTEC 2025 - Proceedings of the 18th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 2: HEALTHINF, pages 1099-1110. INSTICC, SciTePress.<br>
+		<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=Paul2025longitudinal_data&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 		<!--
-		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
@@ -544,7 +546,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/PerComWorkshops53856.2022.9767207" target="_blank" rel="noopener noreferrer">10.1109/PerComWorkshops53856.2022.9767207</a>
 	</td></tr>
 	<tr><td>
-		<i>A Practical Wearable Sensor-Based Human Activity Recognition Research Pipeline.</i> Liu, H., Hartmann, Y., and Schultz, T. (2022).  In BIOSTEC 2022 - Proceedings of the 15th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 5: HEALTHINF, pages 851-860. INSTICC, SciTePress.<br>
+		<i>A Practical Wearable Sensor-Based Human Activity Recognition Research Pipeline.</i> Liu, H., Hartmann, Y., and Schultz, T. (2022). In BIOSTEC 2022 - Proceedings of the 15th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 5: HEALTHINF, pages 851-860. INSTICC, SciTePress.<br>
 		<a href="https://scholar.google.com/scholar?q=A+Practical+Wearable+Sensor-Based+Human+Activity+Recognition+Research+Pipeline" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/A-Practical-Wearable-Sensor-based-Human-Activity-Liu-Hartmann/2e8a7e003683f7f6dca0ba3995c4c971cdfd9de9" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/358567885_A_Practical_Wearable_Sensor-Based_Human_Activity_Recognition_Research_Pipeline" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
