--- a/publications.html
+++ b/publications.html
@@ -119,7 +119,7 @@
 
 	<tr><td>
 		<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-		<img src="images/3.png" height="15"><img src="images/4.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/3.png" height="15"><img src="images/5.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 	</td></tr>
@@ -195,6 +195,16 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/380720805_Remote_intelligent_perception_system_for_multi-object_detection" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/articles/10.3389/fnbot.2024.1398703/full" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
+	</td></tr>
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Thermo-environ-economic analysis of a novel solar-assisted heat pump system; comparison with conventional single stage and cascaded air source heat pumps.</i> Afshin, M. M. and Liu, H.* (2025). Energy. Elsevier<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		-->
 	</td></tr>
 	<tr><td>
 		<i>Enhancing Smart Building Performance with Waste Heat Recovery: Supply-Side Management, Demand Reduction, and Peak Shaving via Advanced Control Systems.</i> Liu, H., Du, Z., Xue, T., and Jiang, T.* (2025). Energy and Buildings, 327:115070. Elsevier.<br>
