--- a/research.html
+++ b/research.html
@@ -754,6 +754,12 @@
 					</td>
 				</tr>
 				<tr>
+					<td align="center">Technical Program Chair (TPC)</td>
+					<td>
+						&#9679; <a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="12" class="pop5"></a> 2025 – 3<sup>rd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, Nanning
+					</td>
+				</tr>
+				<tr>
 					<td align="center">Program Co-Chair (Co-PC)</td>
 					<td>
 						&#9679; <a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="12"></a> – 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="12"></a>), Rome, Itaty
@@ -769,7 +775,7 @@
 					<td align="center">Area Chair (AC)</td>
 					<td>
 						&#9679; <a href="https://e-nns.org/icann2024/organization/program-committee/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="12" class="pop5"></a> - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
-						&#9679; <a href="https://www.ceii.asia/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="12" class="pop5"></a> - 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, Singapore
+						&#9679; <a href="https://ceii.asia/2024/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="12" class="pop5"></a> - 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, Singapore
 					</td>
 				</tr>
 				<tr>
