--- a/publications.html
+++ b/publications.html
@@ -119,7 +119,7 @@
 
 	<tr><td>
 		<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-		<img src="images/3.png" height="15"><img src="images/5.png" height="15">&nbsp;&nbsp;|&nbsp;
+		<img src="images/3.png" height="15"><img src="images/6.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 		<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 	</td></tr>
@@ -207,6 +207,16 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0360544225012897" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.energy.2025.135647" target="_blank" rel="noopener noreferrer">10.1016/j.energy.2025.135647</a>
 	</td></tr>
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>Advanced Biosignal-RGB Fusion with Adaptive Neurofuzzy Classification for High-Precision Action Recognition.</i> Abro1, I. A., Alhasson, H. F., Alharbi, S. S., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, and Liu, H.* (2025). IEEE Access.
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+	</td></tr>
+	-->
 	<tr><td>
 		<i>Enhancing Smart Building Performance with Waste Heat Recovery: Supply-Side Management, Demand Reduction, and Peak Shaving via Advanced Control Systems.</i> Liu, H., Du, Z., Xue, T., and Jiang, T.* (2025). Energy and Buildings, 327:115070. Elsevier.<br>
 		<a href="https://scholar.google.com/scholar?q=Enhancing+Smart+Building+Performance+with+Waste+Heat+Recovery%3A+Supply-Side+Management%2C+Demand+Reduction%2C+and+Peak+Shaving+via+Advanced+Control+Systems" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
