--- a/research.html
+++ b/research.html
@@ -101,7 +101,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (67)</span></h1></td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (68)</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -281,16 +281,15 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2024.1398703" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2024.1398703</a>
 				</td></tr>
 				<tr><td>
-					<i>Thermo-environ-economic analysis of a novel solar-assisted heat pump system; comparison with conventional single stage and cascaded air source heat pumps.</i> Afshin, M. M. and Liu, H.* (2025). Energy. Elsevier<br>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>IoT Powered RNN for Improved Human Activity Recognition with Enhanced Localization and Classification.</i> Mudawi, N. A., Azmat, U., Alazeb, A., Alhasson, H. F., Alabdullah, B., Rahman, H.*, Liu, H., and Jalal, A.* (2025). Scientific Reports. Springer Nature.
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;
-					-->
-					<a href="https://www.researchgate.net/publication/389881579_Thermo-environ-economic_analysis_of_a_novel_solar-assisted_heat_pump_system_comparison_with_conventional_single_stage_and_cascaded_air_source_heat_pumps" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0360544225012897" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.energy.2025.135647" target="_blank" rel="noopener noreferrer">10.1016/j.energy.2025.135647</a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 				</td></tr>
+				-->
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Advanced Biosignal-RGB Fusion with Adaptive Neurofuzzy Classification for High-Precision Action Recognition.</i> Abro1, I. A., Alhasson, H. F., Alharbi, S. S., Alatiyyah, M., AlHammadi, D. A., Jalal, A.*, and Liu, H.* (2025). IEEE Access.
@@ -301,6 +300,14 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 				</td></tr>
 				-->
+				<tr><td>
+					<i>Thermo-environ-economic analysis of a novel solar-assisted heat pump system; comparison with conventional single stage and cascaded air source heat pumps.</i> Afshin, M. M. and Liu, H.* (2025). Energy, 135647. Elsevier<br>
+					<a href="https://scholar.google.com/scholar?q=Thermo-environ-economic+analysis+of+a+novel+solar-assisted+heat+pump+system%3B+comparison+with+conventional+single+stage+and+cascaded+air+source+heat+pumps" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Thermo-environ-economic-analysis-of-a-novel-heat-Manesh-Liu/b5444342a944baf5bc5b34741fc480f97b40cf61" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/389881579_Thermo-environ-economic_analysis_of_a_novel_solar-assisted_heat_pump_system_comparison_with_conventional_single_stage_and_cascaded_air_source_heat_pumps" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0360544225012897" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.energy.2025.135647" target="_blank" rel="noopener noreferrer">10.1016/j.energy.2025.135647</a>
+				</td></tr>
 				<tr><td>
 					<i>Enhancing Smart Building Performance with Waste Heat Recovery: Supply-Side Management, Demand Reduction, and Peak Shaving via Advanced Control Systems.</i> Liu, H., Du, Z., Xue, T., and Jiang, T.* (2025). Energy and Buildings, 327:115070. Elsevier.<br>
 					<a href="https://scholar.google.com/scholar?q=Enhancing+Smart+Building+Performance+with+Waste+Heat+Recovery%3A+Supply-Side+Management%2C+Demand+Reduction%2C+and+Peak+Shaving+via+Advanced+Control+Systems" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
