--- a/publications.html
+++ b/publications.html
@@ -290,7 +290,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s25020441" target="_blank" rel="noopener noreferrer">10.3390/s25020441</a>
 	</td></tr>
 	<tr><td>
-		<i>Human Pose Estimation and Event Recognition via Feature Extraction and Neuro-Fuzzy Classifier.</i> Hanzla1, M., Alshammari, N. S., Alharbi, S. S., Wahid, W., Almujally, N. A., Jalal, A.*, Liu, H.* (2025). IEEE Access, 13:37328-37343.<br>
+		<i>Human Pose Estimation and Event Recognition via Feature Extraction and Neuro-Fuzzy Classifier.</i> Hanzla, M., Alshammari, N. S., Alharbi, S. S., Wahid, W., Almujally, N. A., Jalal, A.*, Liu, H.* (2025). IEEE Access, 13:37328-37343.<br>
 		<a href="https://scholar.google.com/scholar?q=Human+Pose+Estimation+and+Event+Recognition+via+Feature+Extraction+and+Neuro-Fuzzy+Classifier" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Human-Pose-Estimation-and-Event-Recognition-via-and-Hanzla-Alshammari/37c8b39cbe842726388b934b55f9eea8e6745e62" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/388699517_Human_Pose_Estimation_and_Event_Recognition_via_Feature_Extraction_and_Neuro-Fuzzy_Classifier" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
